tests/spec/emit/snapshots/numeric_int_literal_to_float64.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn accept_float(x: float64) -> float64 {
    x
  }
  
  fn test() -> float64 {
    accept_float(42)
  }
---
package main

func acceptFloat(x float64) float64 {
	return x
}

func test() float64 {
	return acceptFloat(42)
}
