tests/spec/emit/snapshots/octal_escape_esc_in_char.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> rune {
    '\033'
  }
---
package main

func test() rune {
	return '\x1b'
}
