tests/spec/emit/snapshots/octal_escape_esc_in_string.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> string {
    "\033"
  }
---
package main

func test() string {
	return "\x1b"
}
