tests/spec/emit/snapshots/octal_escape_followed_by_non_octal.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> string {
    "\08abc"
  }
---
package main

func test() string {
	return "\x008abc"
}
