tests/spec/emit/snapshots/octal_escape_max.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> string {
    "\377"
  }
---
package main

func test() string {
	return "\xff"
}
