tests/spec/emit/snapshots/octal_escape_single_digit.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> string {
    "\7"
  }
---
package main

func test() string {
	return "\x07"
}
