tests/spec/emit/snapshots/octal_escape_two_digit.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> string {
    "\33"
  }
---
package main

func test() string {
	return "\x1b"
}
