tests/spec/emit/snapshots/octal_legacy.snap
---
source: tests/spec/emit/literals.rs
description: "input: \nfn test() -> int {\n  0755\n}\n"
---
package main

func test() int {
	return 0755
}
