tests/spec/emit/snapshots/octal_literal.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> int {
    0o755
  }
---
package main

func test() int {
	return 0o755
}
