tests/spec/emit/snapshots/octal_uppercase.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> int {
    0O644
  }
---
package main

func test() int {
	return 0o644
}
