tests/spec/emit/snapshots/ok_and_err_arms_sharing_a_name_get_distinct_slots.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:fmt"
  import "go:strconv"
  
  fn main() {
    match strconv.Atoi("2") {
      Ok(x) => fmt.Println(x),
      Err(x) => fmt.Println(x),
    }
  }
---
package main

import (
	"fmt"
	"strconv"
)

func main() {
	if x, x_1 := strconv.Atoi("2"); x_1 == nil {
		fmt.Println(x)
	} else {
		fmt.Println(x_1)
	}
}
